feat(script.js): :sparkles: feito adiçao de tarefas

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,6 @@ button {
   color: red;
 }
 
-.erro::placeholder {
+.erro::placeholder, .input-repetido {
   color: red;
 }/*# sourceMappingURL=style.css.map */
