--- a/css/_geral.scss
+++ b/css/_geral.scss
@@ -1,69 +1,88 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background: $cor-background;
-    max-width: 1200px;
-    margin: 50px auto;
-    @include device(medium) {
-        max-width: 900px;
-    }
-    @include device(small) {
-        max-width: 600px;
-    }
+  font-family: Arial, Helvetica, sans-serif;
+  background: $cor-background;
+  max-width: 1200px;
+  margin: 50px auto;
+  @include device(medium) {
+    max-width: 900px;
+  }
+  @include device(small) {
+    max-width: 600px;
+  }
 }
 
 .container {
-    border: 3px solid $cor-secundaria;
-    border-radius: 5px;
-    padding: 30px 45px;
-    box-shadow: $box-shadow;
+  border: 3px solid $cor-secundaria;
+  border-radius: 5px;
+  padding: 30px 45px;
+  box-shadow: $box-shadow;
 }
 
 h1 {
-    font-size: 2em;
-    font-weight: 600;
-    color: $cor-primaria;
-    text-align: center;
+  font-size: 2em;
+  font-weight: 600;
+  color: $cor-primaria;
+  text-align: center;
 }
 
 .container > p {
-    text-align: center;
-    margin-top: 10px;
+  text-align: center;
+  margin-top: 10px;
 }
 
 input, button {
-    border: 2px;
-    border-radius: 5px;
-    padding: 10px 20px;
-    margin: 20px 0;
-    background-color: transparent;
-    box-shadow: $box-shadow;
+  border: 2px;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 20px 0;
+  background-color: transparent;
+  box-shadow: $box-shadow;
 }
 
 input {
-    border: 2px solid $cor-complemento;
+  border: 2px solid $cor-complemento;
 }
 
 input:hover, input:focus {
-    outline: 0;
-    border: 2px solid $cor-secundaria;
+  outline: 0;
+  border: 2px solid $cor-secundaria;
 }
 
 button {    
-    cursor: pointer;
-    font-size: 1em;
-    background-color: $cor-complemento;
-    color: $cor-secundaria;
-
+  cursor: pointer;
+  font-size: 1em;
+  background-color: $cor-complemento;
+  color: $cor-secundaria;
 }
 
 .container-lista {
-    height: 300px;
-    overflow-y: scroll;
-    .tarefa {
-        background-color: #fff;
-        border-radius: 5px;
-        margin: 10px 10px 10px 0px;
-        padding: 20px;
-        cursor: pointer;
+  height: 300px;
+  overflow-y: scroll;
+  .tarefa {
+    display: flex;
+    justify-content: space-between;
+    background-color: #fff;
+    border-radius: 5px;
+    margin: 10px 10px 10px 0px;
+    padding: 20px;
+    cursor: pointer;
+    p {
+      padding-right: 150px;
+      @include device(medium) {
+        padding-right: 500px;
+      }
+      @include device(large) {
+        padding-right: 800px;
+      }
     }
+  }
+}
+
+.material-symbols-outlined {
+  color: $cor-primaria;
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24,
 }
