style: :lipstick: melhorado scss

--- a/css/_geral.scss
+++ b/css/_geral.scss
@@ -30,10 +30,16 @@ h1 {
   margin-top: 10px;
 }
 
+.container-input {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+}
+
 input, button {
   border: 2px;
   border-radius: 5px;
-  padding: 10px 20px;
+  padding: 10px 30px;
   margin: 20px 0;
   background-color: transparent;
   box-shadow: $box-shadow;
@@ -41,11 +47,11 @@ input, button {
 
 input {
   border: 2px solid $cor-complemento;
-}
-
-input:hover, input:focus {
-  outline: 0;
-  border: 2px solid $cor-secundaria;
+  &:hover, &:focus {
+    outline: 0;
+    border: 2px solid $cor-secundaria;
+    transition: .2s;
+  }
 }
 
 button {    
@@ -53,6 +59,11 @@ button {
   font-size: 1em;
   background-color: $cor-complemento;
   color: $cor-secundaria;
+  &:hover {
+    background-color: $cor-secundaria;
+    color: $cor-complemento;
+    transition: .2s;
+  }
 }
 
 .container-lista {
